--- a/backend/package.json
+++ b/backend/package.json
@@ -13,20 +13,24 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.3",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "git": "^0.1.5",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.3",
     "pg": "^8.7.1",
+    "postgres": "^1.0.2",
     "sequelize": "^6.6.5",
+    "sequelize-cli": "^6.4.1",
     "yup": "^0.32.9"
   },
   "devDependencies": {
+    "cep-promise": "^4.1.2",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.24.2",
     "nodemon": "^2.0.15",
-    "sucrase": "^3.20.1"
+    "sucrase": "^3.20.3"
   }
 }
